@@ -1,3 +1,6 @@
+- Issue #15505: `unittest.installHandler` no longer assumes SIGINT handler is
+  set to a callable object.
+
 - Issue #16064: unittest -m claims executable is "python", not "python3"
 
 - Issue #12376: Pass on parameters in TextTestResult.__init__ super call
